src/test/ui/feature-gates/feature-gate-return_position_impl_trait_in_trait.stderr
error[E0562]: `impl Trait` only allowed in function and inherent method return types, not in trait method return
  --> $DIR/feature-gate-return_position_impl_trait_in_trait.rs:2:17
   |
LL |     fn bar() -> impl Sized;
   |                 ^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0562`.
